# notifications-service

./: .gitignore  Cargo.toml  Dockerfile  README.MD
src/: docs.rs  main.rs  routes.rs
src/api/: error.rs  mod.rs  notification_api.rs  notification_request.rs
src/config/: properties.rs
src/model/: email_notification_channel.rs  mod.rs  notification_service.rs  test_data.rs  use_cases.rs
src/model/email/: body_templates.rs  email_templates.rs  mod.rs  smtp.rs
src/model/error/: mod.rs
src/model/notification/: email_notification_channel.rs  mod.rs  notification_service.rs  test_data.rs
src/model/user/: customer.rs  mod.rs  seller.rs
src/ports/: mod.rs
src/ports/rest/: customer.rs  mod.rs  rest_client.rs  seller.rs
src/ports/smtp/: mod.rs  outlook_client.rs
